fixed page stretching problems

--- a/a2/messagehub/app/assets/stylesheets/application.css
+++ b/a2/messagehub/app/assets/stylesheets/application.css
@@ -11,7 +11,7 @@ body {
 
 #container {
 	width: 600px;
-	height: 100%;
+	min-height: 100%;
 	background-color: #FFFFFF;
 	margin: auto;
 	position: absolute;
